DMHelper/src/todos
1. Videos to work (Tharky)
2. Rendering positioning to work on Mac (ongakugainochi)
3. init for maps without combat - view tab doesn'T do anything... (Encryptid) - DONE
4. Players see dead people - Loki - DONE
5. character death not updated - DONE
PCs should also be able to be made invisible (* visibility/known of PCs should also impact visibility) - DONE
DONE (TwistedDM — 04/25/2022) Not sure if this has been mentioned before (I looked but didn't see anything mentioned at least), but the latest release seems to mess with custom selection/activation icons. They display properly in the DM Window, but the player window still shows the default icons.
DONE (Loki — 05/12/2022) Another totally useless find!  Since the PC's were leveling up, I entered their new XP total as 6,500.  When I went back to check them they had all been set to 0.  Entering the value as 6500 worked fine.  Would be nice to have either an error on that field or allow commas.  It doesn't seem to be used anywhere (like auto updating the Proficiency Bonus) so maybe allow both?
DONE (Loki — 05/03/2022) In 2.3 when adding monsters in combat, you could leave Hit Points blank and not check 'Use Average HP'.  This would add the monster with a simulated HP roll so when adding several monsters they could all have different HP.  In 2.4 it just seems to add them all with the average.
(nubsie13 — 05/12/2022) Please forgive my ignorance, but is there a way to have the turn countdown bar appear in the initiative tracker on the player window?
Combatant Frame
Countdown Timer
On/off
Yes/No confirmation on Fill/Clear for FOW

Configuration of:
   * grid width
   * grid color
   * initiative tracker icon size
   * initiative tracker text size
Fixed basic Youtube playback - DONE

Battle Frame://change to have greyscale and BW FOWs - also, switching back and forth leaves the publish icon not synced!
Videos to play back in repeat mode
Custom selection/activation not rendering in player's window
Visible markers not shown on rendered map (video?)
Not able to manually drag around the party icon from the player's window
Switching on and off different kinds of renderer doesn't work right
Effects smaller than 5ft are not rendered properly.
Effect selection is not shown
Audio playback of YouTube caused crash (probably during rendering)


EncounterText complete import/export of extended text capabilities
EncounterTextEdit - clear needs to clear background
Fix image filters to include all images and videos

CRASH: update Bestiary from default to new after opening a battle



$ ../libvpx/configure --target=x86_64-win64-vs14 --enable-vp8 --enable-vp9 --disable-examples --disable-docs --enable-static-msvcrt^C
$ ./ffplay -codec:v libvpx dancer1.webm
$ ./configure --enable-asm --enable-yasm --arch=x86_64 --target-os=win64 --enable-libvpx --disable-doc --disable-debug --toolchain=msvc --enable-ffplay



sudo apt-get install libtool automake autoconf autopoint make gettext pkg-config git subversion cmake cvs zip nsis bzip2 yasm ragel ant default-jdk dos2unix gcc-mingw-w64-x86-64 g++-mingw-w64-x86-64 gcc-mingw-w64-i686 g++-mingw-w64-i686 mingw-w64-tools gcc g++ python bison wine flex wget gperf curl python3-distutils clang p7zip-full
git clone --single-branch --branch master https://code.videolan.org/videolan/vlc.git vlc-4.x
or
git clone --single-branch --branch 3.0.x https://code.videolan.org/videolan/vlc.git vlc-3.x
mkdir -p vlc-3.x/build/ && cd vlc-3.x/build/
sh ../extras/package/win32/build.sh

https://code.videolan.org/videolan/vlc/-/merge_requests/1032

dpkg --add-architecture i386 && apt-get update && apt-get install wine32


sudo ../../contrib/bootstrap --host=i686-w64-mingw32 --enable-pdb --disable-libaribcaption
sudo make fetch
sudo VLC_TOOLS="../../tools/build" PKG_CONFIG_PATH="" make

contribs are not in <path/to/vlc/root>/contrib/i686-w64-mingw32/, but in In your build root you create a folder where you will build and then build all of them/contrib/i686-w64-mingw32/

cd <build_folder>
PKG_CONFIG="`which pkg-config`" ../extras/package/win32/configure.sh --host=i686-w64-mingw32 --prefix=/home/vlc-4.x/newbuild --enable-debug --with-contrib=./i686-w64-mingw32 --disable-nls --disable-ncurses CFLAGS="-fdebug-prefix-map='/mnt/c/'='c:/'" CXXFLAGS="-fdebug-prefix-map='/mnt/c/'='c:/'"


/home/vlc-4.x/newbuild



mft.cpp

/*
hr = attributes->GetUINT32(MF_SA_D3D11_AWARE, &can_d3d11);
if (SUCCEEDED(hr) && can_d3d11)
{
    SetD3D11(p_dec, &devsys11->d3d_dev);

    IMFAttributes *outputAttr = NULL;
    hr = p_sys->mft->GetOutputStreamAttributes(p_sys->output_stream_id, &outputAttr);
    if (SUCCEEDED(hr))
    {
        hr = outputAttr->SetUINT32(MF_SA_D3D11_BINDFLAGS, D3D11_BIND_SHADER_RESOURCE);
    }
}
*/

dcomp.h
#undef INTERFACE
#define INTERFACE IDCompositionVisual2
DECLARE_INTERFACE_IID_(IDCompositionVisual2, IDCompositionVisual, "E8DE1639-4331-4B26-BC5F-6A321D347A85")
{
        /*
    STDMETHOD(SetOpacityMode)(THIS_ DCOMPOSITION_OPACITY_MODE) PURE;
    STDMETHOD(SetBackFaceVisibility)(THIS_ DCOMPOSITION_BACKFACE_VISIBILITY) PURE;
    */
};

../../extras/package/win32/../../../modules/gui/qt/maininterface/compositor_dcomp_acrylicsurface.cpp:347:66: error: ‘SM_CXPADDEDBORDER’ was not declared in this scope
  347 |         frameX = GetSystemMetrics(SM_CXFRAME) + GetSystemMetrics(SM_CXPADDEDBORDER);
      |                                                                  ^~~~~~~~~~~~~~~~~
../../extras/package/win32/../../../modules/gui/qt/maininterface/compositor_dcomp_acrylicsurface.cpp:354:70: error: ‘SM_CXPADDEDBORDER’ was not declared in this scope
  354 |         frameX = GetSystemMetrics(SM_CXSIZEFRAME) + GetSystemMetrics(SM_CXPADDEDBORDER);



/usr/bin/i686-w64-mingw32-ld: /home/vlc-4.x/newbuild/contrib/vulkan-loader/loader/vk_loader_platform.h:374: undefined reference to `InitOnceExecuteOnce'
/usr/bin/i686-w64-mingw32-ld: /home/vlc-4.x/newbuild/contrib/vulkan-loader/loader/vk_loader_platform.h:374: undefined reference to `InitOnceExecuteOnce'
/usr/bin/i686-w64-mingw32-ld: /home/vlc-4.x/newbuild/contrib/vulkan-loader/loader/vk_loader_platform.h:374: undefined reference to `InitOnceExecuteOnce'




\\wsl.localhost\Ubuntu\home\vlc-4.x\contrib\src\ffmpeg
